--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <!-- Hero Section -->
     <section id="hero">
-        <div class="container">
+        img
+        <div class="container" >
             <div class="hero-content">
                 <h1>Frontend Developer</h1>
                 <p>I create beautiful, responsive websites with modern technologies. Currently specializing in JavaScript frameworks and UI/UX design.</p>
@@ -93,86 +94,40 @@
         <div class="container">
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
-                <!-- Task Manager App -->
+                <!-- Rock Paper Scissors Game -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Task Manager">
+                        <img src="https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Rock Paper Scissors Game">
                     </div>
                     <div class="project-info">
-                        <h3>Task Manager App</h3>
-                        <p>A responsive task management application with local storage persistence.</p>
+                        <h3>Rock Paper Scissors Game</h3>
+                        <p>A fun interactive game built with vanilla JavaScript that lets you play against the computer.</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
-                            <span>LocalStorage</span>
                         </div>
                         <div class="project-links">
-                            <button class="btn" id="openTaskManager">Live Demo</button>
-                            <a href="#" class="view-code">View Code</a>
+                            <button class="btn" id="openRPSGame">Live Demo</button>
                         </div>
                     </div>
                 </div>
 
-                <!-- Budget Tracker App -->
+                <!-- Password Generator -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Budget Tracker">
+                        <img src="https://images.unsplash.com/photo-1614064641938-3bbee52942c7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Password Generator">
                     </div>
                     <div class="project-info">
-                        <h3>Budget Tracker App</h3>
-                        <p>An expense tracking application that helps manage personal finances.</p>
+                        <h3>Password Generator</h3>
+                        <p>A secure random password generator that creates strong passwords with copy functionality.</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
-                            <span>LocalStorage</span>
                         </div>
                         <div class="project-links">
-                            <button class="btn" id="openBudgetTracker">Live Demo</button>
-                            <a href="#" class="view-code">View Code</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- E-commerce Dashboard -->
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="E-commerce Dashboard">
-                    </div>
-                    <div class="project-info">
-                        <h3>E-commerce Dashboard</h3>
-                        <p>A responsive dashboard for e-commerce analytics with interactive charts.</p>
-                        <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
-                            <span>Chart.js</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn">Live Demo</a>
-                            <a href="#" class="view-code">View Code</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <!-- Weather App -->
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Weather App">
-                    </div>
-                    <div class="project-info">
-                        <h3>Weather App</h3>
-                        <p>A weather application that displays current weather and forecast.</p>
-                        <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
-                            <span>API</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn">Live Demo</a>
-                            <a href="#" class="view-code">View Code</a>
+                            <button class="btn" id="openPasswordGenerator">Live Demo</button>
                         </div>
                     </div>
                 </div>
@@ -260,67 +215,40 @@
     </footer>
 
     <!-- Project Modals -->
-    <div class="modal" id="taskManagerModal">
+    <div class="modal" id="rpsGameModal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
             <div class="project-container">
-                <h2>Task Manager</h2>
-                <div class="task-app">
-                    <div class="task-input">
-                        <input type="text" id="taskInput" placeholder="Add a new task...">
-                        <button id="addTaskBtn" class="btn">Add Task</button>
+                <h2>Rock Paper Scissors Game</h2>
+                <div class="rps-game">
+                    <p>Choose your move:</p>
+                    <div class="buttons">
+                        <button id="rock">&#x1F44A;</button>
+                        <button id="paper">&#x1f590;</button>
+                        <button id="scissors">&#x270c;</button>
                     </div>
-                    <div id="taskList" class="task-list"></div>
+                    <p id="result"></p>
+                    <p id="scores">
+                        Your score: <span id="user-score">0</span>
+                        Computer score: <span id="computer-score">0</span>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="modal" id="budgetTrackerModal">
+    <div class="modal" id="passwordGeneratorModal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
             <div class="project-container">
-                <h2>Budget Tracker</h2>
-                <div class="budget-app">
-                    <div class="balance-container">
-                        <h3>Your Balance</h3>
-                        <h1 id="balance">$0.00</h1>
-                        <div class="income-expense">
-                            <div class="income">
-                                <h4>Income</h4>
-                                <p id="income">$0.00</p>
-                            </div>
-                            <div class="expense">
-                                <h4>Expense</h4>
-                                <p id="expense">$0.00</p>
-                            </div>
-                        </div>
+                <h2>Random Password Generator</h2>
+                <div class="password-generator">
+                    <div class="input-container">
+                        <input type="text" id="password-input" class="input" placeholder="Create Password" readonly>
+                        <i class="far fa-copy fa-2x"></i>
                     </div>
-                    <div class="transaction-form">
-                        <h3>Add New Transaction</h3>
-                        <form id="transactionForm">
-                            <div class="form-group">
-                                <label for="description">Description</label>
-                                <input type="text" id="description" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="amount">Amount</label>
-                                <input type="number" id="amount" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="type">Transaction Type</label>
-                                <select id="type" required>
-                                    <option value="income">Income</option>
-                                    <option value="expense">Expense</option>
-                                </select>
-                            </div>
-                            <button type="submit" class="btn">Add Transaction</button>
-                        </form>
-                    </div>
-                    <div class="transactions">
-                        <h3>Transaction History</h3>
-                        <div id="transactionList" class="transaction-list"></div>
-                    </div>
+                    <button class="btn" id="generate-btn">Generate</button>
+                    <div class="alert-container">Password Copied</div>
                 </div>
             </div>
         </div>
